tests/ui/recurse.stderr
error[E0597]: `tag` does not live long enough
  --> $DIR/recurse.rs:6:5
   |
6  |     mk_nano_arena!(arena); // `tag` does not live long enough
   |     ^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...
12 | }
   | - borrowed value only lives until here
   |
note: borrowed value must be valid for the anonymous lifetime #1 defined on the function body at 5:1...
  --> $DIR/recurse.rs:5:1
   |
5  | / fn recursive(idx: Option<Idx8<'_>>) {
6  | |     mk_nano_arena!(arena); // `tag` does not live long enough
7  | |     if let Some(idx) = idx {
8  | |         assert_eq!("hello", arena[idx]);
...  |
11 | |     }
12 | | }
   | |_^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
